[gd_scene load_steps=5 format=3 uid="uid://dtyn8imbyo2rg"]

[ext_resource type="Script" path="res://src/ui_parts/update_menu.gd" id="1_up0ed"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xqary"]

[sub_resource type="LabelSettings" id="LabelSettings_h3pgq"]
font_size = 12
font_color = Color(0.6875, 0.6875, 0.6875, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nqy1r"]

[node name="UpdateMenu" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.408203
anchor_top = 0.424219
anchor_right = 0.591797
anchor_bottom = 0.575781
offset_bottom = 1.52588e-05
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"OverlayPanel"
theme_override_styles/panel = SubResource("StyleBoxEmpty_xqary")
script = ExtResource("1_up0ed")
metadata/_edit_use_anchors_ = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true
download_chunk_size = 32768
timeout = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="UpdateCheckPanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
theme_type_variation = &"OverlayPanel"

[node name="UpdateCheckVBox" type="VBoxContainer" parent="VBoxContainer/UpdateCheckPanelContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox"]
layout_mode = 2
text = "Update Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox"]
layout_mode = 2

[node name="Status" type="RichTextLabel" parent="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Check" type="Button" parent="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Check for Updates"

[node name="Hint" type="Label" parent="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox/VBoxContainer"]
layout_mode = 2
text = "This will connect to the Internet."
label_settings = SubResource("LabelSettings_h3pgq")
horizontal_alignment = 1

[node name="IncludePrereleases" type="CheckBox" parent="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_nqy1r")
button_pressed = true
text = "Include Prereleases"

[node name="Close" type="Button" parent="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Close"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_request_completed"]
[connection signal="meta_clicked" from="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox/Status" to="." method="_on_status_label_link_clicked"]
[connection signal="pressed" from="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox/VBoxContainer/Check" to="." method="_on_check_pressed"]
[connection signal="pressed" from="VBoxContainer/UpdateCheckPanelContainer/UpdateCheckVBox/Close" to="." method="_on_close_pressed"]
